@@ -1,2 +1,6 @@
 --enable-preview
-
+-Djdk.tracePinnedThreads=full
+-XX:+MaxFDLimit
+-XX:+UseZGC
+-Xms1G 
+-Xmx2G
